--- a/style.css
+++ b/style.css
@@ -334,6 +334,9 @@ header {
 
 /* レスポンシブ */
 @media screen and (max-width: 1280px) {
+  body{
+    overflow-x: hidden;
+  }
   .content{
     width: 850px;
     height: auto;
@@ -378,6 +381,9 @@ header {
   }
 }
 @media screen and (max-width: 1024px) {
+  body{
+    overflow-x: hidden;
+  }
   /*ハンバーガー*/
   .pc{
     display: none;
@@ -479,6 +485,9 @@ header {
   }
 }
 @media screen and (max-width: 959px) {
+  body{
+    overflow-x: hidden;
+  }
   .fv {
     width: 100%;
     height: 600px;
@@ -553,6 +562,9 @@ header {
   
 }
 @media screen and (max-width: 820px) {
+  body{
+    overflow-x: hidden;
+  }
   .baner img{
     width: 700px;
     height: auto;
@@ -607,6 +619,9 @@ header {
 }
 
 @media screen and (max-width: 540px) {
+  body{
+    overflow-x: hidden;
+  }
   .baner img{
     width: 500px;
     height: auto;
@@ -616,6 +631,9 @@ header {
     height: auto;
     margin: 0 auto;
     padding: 50px 0;
+  }
+  .strong{
+    margin-bottom: 0;
   }
   .strong__wrap{
     width: 400px;
@@ -632,6 +650,9 @@ header {
   .strong__text{
     padding: 30px;
     font-weight: bold;
+  }
+  .step{
+    margin-top: 0;
   }
   .step__content img{
     width: 400px;
@@ -681,6 +702,9 @@ header {
   }
 }
 @media only screen and (max-width: 420px) {
+  body{
+    overflow-x: hidden;
+  }
   .baner img{
     width: 350px;
   }
@@ -704,6 +728,7 @@ header {
     justify-content: center;
     align-items: center;
     margin-bottom: 40px;
+    padding: 24px;
   }
   .category__title{
     text-align: center;
@@ -722,6 +747,9 @@ header {
   .step__text{
     margin-top: 24px;
     margin-left: 0;
+  }
+  .step__text-box{
+    margin-left: 20px;
   }
   .voice .category__title{
     margin-bottom: 50px;
