--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@
 html{
   scroll-behavior: smooth;
 }
-body{
-  overflow-x: hidden;
-}
 a{
   text-decoration: none;
+}
+.wrapper{
+  overflow-x: hidden;
 }
 .btn{
   display: flex;
@@ -334,9 +334,6 @@ header {
 
 /* レスポンシブ */
 @media screen and (max-width: 1280px) {
-  body{
-    overflow-x: hidden;
-  }
   .content{
     width: 850px;
     height: auto;
@@ -381,9 +378,6 @@ header {
   }
 }
 @media screen and (max-width: 1024px) {
-  body{
-    overflow-x: hidden;
-  }
   /*ハンバーガー*/
   .pc{
     display: none;
@@ -485,9 +479,6 @@ header {
   }
 }
 @media screen and (max-width: 959px) {
-  body{
-    overflow-x: hidden;
-  }
   .fv {
     width: 100%;
     height: 600px;
@@ -562,9 +553,6 @@ header {
   
 }
 @media screen and (max-width: 820px) {
-  body{
-    overflow-x: hidden;
-  }
   .baner img{
     width: 700px;
     height: auto;
@@ -619,9 +607,6 @@ header {
 }
 
 @media screen and (max-width: 540px) {
-  body{
-    overflow-x: hidden;
-  }
   .baner img{
     width: 500px;
     height: auto;
@@ -702,9 +687,6 @@ header {
   }
 }
 @media only screen and (max-width: 420px) {
-  body{
-    overflow-x: hidden;
-  }
   .baner img{
     width: 350px;
   }
